[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_GEB"
authors = [
    {name = "Jens de Bruijn", email = "jens.de.bruijn@vu.nl"},
    {name = "Dirk Eilander", email = "dirk.eilander@deltares.nl"},
]
dependencies = [
]
requires-python = ">=3.8" # fix tests to support older versions
readme = "README.rst"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
]
doc = [
]
full = [
]

[project.urls]
Documentation = "https://deltares.github.io/hydromt_sfincs/"
Source = "https://github.com/Deltares/hydromt_sfincs"

[project.entry-points."hydromt.models"]
geb = "hydromt_geb.geb:GEBModel"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flit.sdist]
include = ["hydromt_geb"]
exclude = ["docs", "examples", "envs", "tests", "binder", ".github", "sandbox"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]