[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_geb"
authors = [
    {name = "Jens de Bruijn", email = "jens.de.bruijn@vu.nl"},
]
dependencies = [
    "s3fs",
    "xesmf",
    "hydromt>=0.8.0"
]
requires-python = ">=3.8" # fix tests to support older versions
readme = "README.md"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
]
doc = [
]
full = [
]

[project.entry-points."hydromt.models"]
geb = "hydromt_geb.geb:GEBModel"